@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v25.12.4-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-12-04 15:00:21, took 00:12:43, with 50 workers, on 844 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2025-12-04 15:40:11, took 00:13:03, with 50 workers, on 844 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
