@@ -17664,3 +17664,6 @@ qc pass: ipv4-ipv6 multicast translation
 ---------------------------------- 2025-12-04 14:29:14 25.12.4
 no qc pass: wireguard over asymmetric ports
 failed: wireguard over asymmetric ports
+---------------------------------- 2025-12-04 15:13:40 25.12.4
+no failed: wireguard over asymmetric ports
+qc pass: wireguard over asymmetric ports
